requirements done on to testing

--- a/compiler.css
+++ b/compiler.css
@@ -2,7 +2,7 @@
 
 body
 {
-    background-color: #ddd9c0;
+    background-color: #eecfa5;
     background-repeat: repeat-x;
     font-family: Helvetica, Verdana, Arial, sans-serif;
     font-size: 10pt;
@@ -29,7 +29,7 @@ h2
 
 .textbox
 {
-    background-color: #eae7d2;
+    background-color: #f4d1aa;
 }
 
 #headers
